--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
                         <div class="main__hero-aside">
                         <div class="main__subtitles">
                             <div class="main__subBlock">
-                                <img class="main__subImg" src="" alt="">
+                                <img class="main__subImg" src="./images/icons/Mission.png" alt="">
                                 <div class="main__subtitle">Предназначению</div>
                             </div>
                             <div class="main__subBlock">
-                                <img class="main__subImg" src="" alt="">
+                                <img class="main__subImg" src="./images/icons/Christmas Star.png" alt="">
                                 <div class="main__subtitle">Исполнению желаний </div>
                             </div>
                             <div class="main__subBlock">
-                                <img class="main__subImg" src="" alt="">
+                                <img class="main__subImg" src="./images/icons/Wedding Gift.png" alt="">
                                 <div class="main__subtitle">Получению подарков</div>
                             </div> 
                         </div>
@@ -56,7 +56,7 @@
                         <div class="main__buttons-info btn-info">
                             <div class="btn-info-first">
                                 <h3 class="info-first-title">Вартість:</h3>
-                                <h3 class="info-first-text">393 грн <span class="hide" style="opacity: 0;">--</span><span class="costValue">1405 грн</span></h3>
+                                <h3 class="info-first-text">390 грн <span class="hide" style="opacity: 0;">--</span><span class="costValue">1405 грн</span></h3>
                             </div>
                             <div class="btn-info-second">
                                 <h3 class="info-second-title">До підвищення цін:</h3>
@@ -137,22 +137,22 @@
                             </div>
                             <div class="card swiper-slide">
                                 <div class="card-content">
-                                    <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/certf1.jpg" alt="Image">
+                                    <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/certf2.png" alt="Image">
                                 </div>
                             </div>
                             <div class="card swiper-slide">
                                 <div class="card-content">
-                                    <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/certf1.jpg" alt="Image">
+                                    <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/certf3.png" alt="Image">
                                 </div>
                             </div>
                             <div class="card swiper-slide">
                                 <div class="card-content">
-                                    <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/certf1.jpg" alt="Image">
+                                    <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/certf4.jpg" alt="Image">
                                 </div>
                             </div>
                             <div class="card swiper-slide">
                                 <div class="card-content">
-                                    <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/certf1.jpg" alt="Image">
+                                    <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/certf5.png" alt="Image">
                                 </div>
                             </div>
                             </div>
@@ -168,23 +168,23 @@
                     <h2 class="courseProgram__title">Что тебя ждет на курсе: </h2>
                     <div class="courseProgram__aside">
                         <div class="courseProgram__block">
-                            <div><img src="./images/icons/phone.svg" alt="" class="courseProgram__image"></div>
+                            <div><img src="./images/icons/Telegram App.png" alt="" class="courseProgram__image"></div>
                             <p class="courseProgram__text">Сразу после оплаты ты получаешь ссылку на телеграм-канал, где раз в неделю в течении месяца будет приходить новый модуль</p>
                         </div>
                         <div class="courseProgram__block">
-                            <div><img src="./images/icons/clock.svg" alt="" class="courseProgram__image"></div>
+                            <div><img src="./images/icons/Sand Timer.png" alt="" class="courseProgram__image"></div>
                             <p class="courseProgram__text">Доступ к курсу остается навсегда. Это значит, что ты в любой момент сможешь вернуться к пройденному материалу</p>
                         </div>
                         <div class="courseProgram__block">
-                            <div><img src="./images/icons/laptop.svg" alt="" class="courseProgram__image"></div>
+                            <div><img src="./images/icons/iMac.png" alt="" class="courseProgram__image"></div>
                             <p class="courseProgram__text">8 видео уроков</p>
                         </div>
                         <div class="courseProgram__block">
-                            <div><img src="./images/icons/meditation.svg" alt="" class="courseProgram__image"></div>
+                            <div><img src="./images/icons/Prenatal Yoga.png" alt="" class="courseProgram__image"></div>
                             <p class="courseProgram__text">4 авторские медитации с элементами расстановок, которые усилят твой результат</p>
                         </div>
                         <div class="courseProgram__block">
-                            <div><img src="./images/icons/house.svg" alt="" class="courseProgram__image"></div>
+                            <div><img src="./images/icons/Exterior.png" alt="" class="courseProgram__image"></div>
                             <p class="courseProgram__text">Курс можно проходить в любое время и в любом месте в комфортном для тебя темпе. Для лучших результатов рекомендую рисовать по одному алгоритму в неделю, находясь наедине с собой, чтобы можно было сосредоточиться</p>
                         </div>
                     </div>
@@ -197,19 +197,19 @@
                     <h2 class="courseProgram__title">Что ты получишь в результате прохождения курса: </h2>
                     <div class="courseProgram__aside">
                         <div class="courseProgram__block">
-                            <div><img src="./images/icons/phone.svg" alt="" class="courseProgram__image"></div>
+                            <div><img src="./images/icons/Love Path.png" alt="" class="courseProgram__image"></div>
                             <p class="courseProgram__text">Осознаешь свое предназначение и поймешь, в каком направлении двигаться дальше</p>
                         </div>
                         <div class="courseProgram__block">
-                            <div><img src="./images/icons/clock.svg" alt="" class="courseProgram__image"></div>
+                            <div><img src="./images/icons/fire.png" alt="" class="courseProgram__image"></div>
                             <p class="courseProgram__text">Получишь импульс для реализации своих желаний и смелых мечт</p>
                         </div>
                         <div class="courseProgram__block">
-                            <div><img src="./images/icons/laptop.svg" alt="" class="courseProgram__image"></div>
+                            <div><img src="./images/icons/gift.png" alt="" class="courseProgram__image"></div>
                             <p class="courseProgram__text">Начнешь легче принимать подарки от мужчин и видеть изобилие Мира</p>
                         </div>
                         <div class="courseProgram__block">
-                            <div><img src="./images/icons/meditation.svg" alt="" class="courseProgram__image"></div>
+                            <div><img src="./images/icons/Prenatal Yoga.png" alt="" class="courseProgram__image"></div>
                             <p class="courseProgram__text">С каждым рисунком на смену твоим страхам, сомнениям и внутренним запретам будут приходить расслабление в теле, спокойствие и уверенность в действия</p>
                         </div>
                     </div>
@@ -224,27 +224,57 @@
                     <div class="card-wrapper swiper-wrapper">
                         <div class="card swiper-slide">
                             <div class="card-content">
-                                <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/certf1.jpg" alt="Image">
+                                <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/carousel/review1.png" alt="Image">
                             </div>
                         </div>
                         <div class="card swiper-slide">
                             <div class="card-content">
-                                <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/certf1.jpg" alt="Image">
+                                <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/carousel/review2.png" alt="Image">
                             </div>
                         </div>
                         <div class="card swiper-slide">
                             <div class="card-content">
-                                <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/certf1.jpg" alt="Image">
+                                <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/carousel/review3.png" alt="Image">
                             </div>
                         </div>
                         <div class="card swiper-slide">
                             <div class="card-content">
-                                <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/certf1.jpg" alt="Image">
+                                <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/carousel/review4.png" alt="Image">
                             </div>
                         </div>
                         <div class="card swiper-slide">
                             <div class="card-content">
-                                <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/certf1.jpg" alt="Image">
+                                <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/carousel/slide1.jpg" alt="Image">
+                            </div>
+                        </div>
+                        <div class="card swiper-slide">
+                            <div class="card-content">
+                                <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/carousel/slide1.jpg" alt="Image">
+                            </div>
+                        </div>
+                        <div class="card swiper-slide">
+                            <div class="card-content">
+                                <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/carousel/slide2.heic" alt="Image">
+                            </div>
+                        </div>
+                        <div class="card swiper-slide">
+                            <div class="card-content">
+                                <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/carousel/slide3.jpg" alt="Image">
+                            </div>
+                        </div>
+                        <div class="card swiper-slide">
+                            <div class="card-content">
+                                <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/carousel/slide4.png" alt="Image">
+                            </div>
+                        </div>
+                        <div class="card swiper-slide">
+                            <div class="card-content">
+                                <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/carousel/slide5.jpg" alt="Image">
+                            </div>
+                        </div>
+                        <div class="card swiper-slide">
+                            <div class="card-content">
+                                <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/carousel/slide6.jpg" alt="Image">
                             </div>
                         </div>
                         </div>
@@ -274,7 +304,7 @@
                                       <li class="content__link">Медитация «Чудо»</li>
                                   </div>
                                   <div class="content__image">
-                                      <img style="width: 250px;height: auto;" src="./images/certf1.jpg" alt="" class="content__img">
+                                      <img style="width: 250px;height: auto;" src="./images/modul1.jpg" alt="" class="content__img">
                                   </div>
                                    </div>
                               </div>
@@ -289,7 +319,7 @@
                                     <li class="content__link">Практика медитация с элементами расстановок: «Право жить свою жизнь»</li>
                                 </div>
                                 <div class="content__image">
-                                    <img style="width: 250px;height: auto;" src="./images/certf1.jpg" alt="" class="content__img">
+                                    <img style="width: 250px;height: auto;" src="./images/carousel/modul2.jpg" alt="" class="content__img">
                                 </div>
                                  </div>
                             </div>
@@ -303,7 +333,7 @@
                                       <li class="content__link">Медитация : «Встреча с внутренним ребенком»</li>
                                   </div>
                                   <div class="content__image">
-                                      <img style="width: 250px;height: auto;" src="./images/certf1.jpg" alt="" class="content__img">
+                                      <img style="width: 250px;height: auto;" src="./images/carousel/modul3.jpg" alt="" class="content__img">
                                   </div>
                                    </div>
                               </div>
@@ -317,7 +347,7 @@
                                       <li class="content__link">Медитация «Встреча с внутренними родителям»</li>
                                   </div>
                                   <div class="content__image">
-                                      <img style="width: 250px;height: auto;" src="./images/certf1.jpg" alt="" class="content__img">
+                                      <img style="width: 250px;height: auto;" src="./images/carousel/modul4.jpg" alt="" class="content__img">
                                   </div>
                                    </div>
                               </div>
