--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             <h2 class="slider__title">Oтзывы</h2>
             <div class="slide-container swiper">
                 <div class="slide-content">
-                    <div class="card-wrapper swiper-wrapper">
+                    <div style="align-items: center;" class="card-wrapper swiper-wrapper">
                         <div class="card swiper-slide">
                             <div class="card-content">
                                 <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/carousel/review1.png" alt="Image">
