--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                             </div>
                             <div class="card swiper-slide">
                                 <div class="card-content">
-                                    <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/certf1.png" alt="Image">
+                                    <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/certf1.jpg" alt="Image">
                                 </div>
                             </div>
                             </div>
@@ -228,11 +228,28 @@
                    
                     <div class="course__aside">
                         <div class="course__cost">390 <span class="cost">грн</span></div>
-                        <div class="course__value">Осталось:
-                            <span>20 мест</span></div>
+                        <!-- <div class="course__value">Осталось:
+                            <span>20 мест</span></div> -->
                     </div>
                     <div class="course__button">
                         <a href="" class="course__btn">ИДУ НА КУРС</a>
+                    </div>
+                    <div class="course__timeBlock">
+                        <div class="course__time-title">До окончания акции осталось:</div>
+                        <div class="course__time-wrap">
+                            <div class="course__time-links">
+                                <div class="time-links__li btn-li">02</div>
+                                <div class="time-links__li">часов</div>
+                            </div>
+                            <div class="course__time-links">
+                                <div class="time-links__li btn-li">57</div>
+                                <div class="time-links__li">минут</div>
+                            </div>
+                            <div class="course__time-links">
+                                <div class="time-links__li btn-li">00</div>
+                                <div class="time-links__li">секунд</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -325,32 +342,27 @@
                         </div>
                         <div class="card swiper-slide">
                             <div class="card-content">
-                                <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/carousel/slide1.jpg" alt="Image">
+                                <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/carousel/slide2.heic.jpg" alt="Image">
                             </div>
                         </div>
                         <div class="card swiper-slide">
                             <div class="card-content">
-                                <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/carousel/slide2.heic" alt="Image">
+                                <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/carousel/slide3.jpg.heic" alt="Image">
                             </div>
                         </div>
                         <div class="card swiper-slide">
                             <div class="card-content">
-                                <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/carousel/slide3.jpg" alt="Image">
+                                <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/carousel/slide4.jpg" alt="Image">
                             </div>
                         </div>
                         <div class="card swiper-slide">
                             <div class="card-content">
-                                <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/carousel/slide4.png" alt="Image">
+                                <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/carousel/slide5.jpg.png" alt="Image">
                             </div>
                         </div>
                         <div class="card swiper-slide">
                             <div class="card-content">
-                                <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/carousel/slide5.jpg" alt="Image">
-                            </div>
-                        </div>
-                        <div class="card swiper-slide">
-                            <div class="card-content">
-                                <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/carousel/slide6.jpg" alt="Image">
+                                <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/carousel/slide6.jpg.jpg" alt="Image">
                             </div>
                         </div>
                         </div>
