--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
                         </div>
                         </div>
                         <p class="main__text">
-                            С помощью мощных алгоритмов 
+                            С помощью мощных алгоритмов<br>
                             метода НейроГрафика</p>
                         </div> 
                     <div class="main__buttons-block">
                         <div class="main__buttons-info btn-info">
                             <div class="btn-info-first">
                                 <h3 class="info-first-title">Вартість:</h3>
-                                <h3 class="info-first-text">390 грн <span class="hide" style="opacity: 0;">--</span><span class="costValue">1405 грн</span></h3>
+                                <h3 class="info-first-text">390 грн <span class="hide" style="opacity: 0;">--</span><span class="costValue">3250 грн</span></h3>
                             </div>
                             <div class="btn-info-second">
                                 <h3 class="info-second-title">До підвищення цін:</h3>
@@ -72,6 +72,14 @@
                 <img style="filter: brightness(0.7);" src="./images/background.jpg" alt="Image2">
             </div>
 
+        </section>
+        <section class="page__bonus bonus">
+            <div class="bonus__container _container">
+                <div class="bonus__body">
+                    <h2 class="bonus__title">Бонус для тех, кто присоединиться <span style="font-weight: 600;">сегодня</span></h2>
+                    <p class="bonus__text">Гайд «8 способов трансформировать реальность»</p>
+                </div>
+            </div>
         </section>
         <section class="page__target target">
             <div class="target__container _container">
