--- a/index.html
+++ b/index.html
@@ -124,9 +124,10 @@
                                 <h4 class="about__subtitle">Привет! Меня зовут Надежда Якимова! </h4>
                             </div>
                            <ul class="about__list">
-                            <li class="about__li">Уже 13 лет я изучаю психологию и открываю для себя самые действенные методы для работы с мозгом как с самым мощным инструментом для трансформации реальности. </li>
+                            <li class="about__li">Уже 13 лет я изучаю психологию и открываю самые эффективные методы, которые помогли мне и моим клиентам изменить жизнь в лучшую сторону во всех сферах
+                            </li>
                             <li class="about__li">Я сертифицированный специалист нейрографики, психолог, гештальт-консультант, коуч, расстановщик, ведущая трансформационных игр, автор медитаций и терапевтических курсов</li>
-                            <li class="about__li">За 6 лет практики более 1000 клиентов прошли со мной этот путь и достигли положительных результатов!
+                            <li class="about__li">За 6 лет практики более 1000 клиентов прошли со мной этот путь и достигли значительных положительных изменений!
                             </li>
                            </ul>
                         </div>
@@ -286,7 +287,8 @@
                         </div>
                         <div class="courseProgram__block dest-block">
                             <div><img src="./images/icons/Exterior.png" alt="" class="courseProgram__image"></div>
-                            <p class="courseProgram__text">Курс можно проходить в любое время и в любом месте в комфортном для тебя темпе. Для лучших результатов рекомендую рисовать по одному алгоритму в неделю, находясь наедине с собой, чтобы можно было сосредоточиться</p>
+                            <p class="courseProgram__text">Курс можно проходить в любое время и в комфортном для тебя темпе.
+                                Для лучших результатов рекомендую рисовать по одному алгоритму в неделю, находясь наедине с собой, чтобы можно было сосредоточиться</p>
                         </div>
                     </div>
                 </div>
