--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <section class="page__bonus bonus">
             <div class="bonus__container _container">
                 <div class="bonus__body">
-                    <h2 class="bonus__title">Бонус для тех, кто присоединиться <span style="font-weight: 600;">сегодня</span></h2>
+                    <h2 class="bonus__title">Бонус для тех, кто присоединится <span style="font-weight: 600;">сегодня</span></h2>
                     <p class="bonus__text">Гайд «8 способов трансформировать реальность»</p>
                 </div>
             </div>
@@ -84,7 +84,7 @@
         <section class="page__target target">
             <div class="target__container _container">
                 <div class="target__body">
-                    <h2 class="target__title">Этот курс для тебя, если:</h2>
+                    <h2 class="target__title titleMain">Этот курс для тебя, если:</h2>
                     <div class="target__aside">
                     <div class="target__list">
                         <li class="target__listItem">1 – Ты хочешь узнать, в чем твое предназначение и цель жизни. </li>
@@ -120,7 +120,7 @@
                         </div>
                         <div class="about__textBlock">
                             <div class="about__titles">
-                                <h3 class="about__title">Автор курса: </h3>
+                                <h3 class="about__title titleMain">Автор курса: </h3>
                                 <h4 class="about__subtitle">Привет! Меня зовут Надежда Якимова! </h4>
                             </div>
                            <ul class="about__list">
@@ -135,7 +135,7 @@
                 </div>
             </div>
             <div style="margin-top: 40px;position: relative;" class="slider__container _container">
-                <h2 class="slider__title">Мои сертификаты:</h2>
+                <h2 class="slider__title titleMain">Мои сертификаты:</h2>
                 <div class="slide-container swiper">
                     <div class="slide-content">
                         <div class="card-wrapper swiper-wrapper">
@@ -173,7 +173,7 @@
         <section class="page__course course">
             <div class="course__container _container">
                 <div class="course__body">
-                    <h2 class="course__title">Программа курса</h2>
+                    <h2 style="color: #fff !important;" class="course__title titleMain">Программа курса</h2>
                     <div class="course__card">
                         <div class="accordion">
                             <hr>
@@ -240,9 +240,6 @@
                         <!-- <div class="course__value">Осталось:
                             <span>20 мест</span></div> -->
                     </div>
-                    <div class="course__button">
-                        <a href="" class="course__btn">ИДУ НА КУРС</a>
-                    </div>
                     <div class="course__timeBlock">
                         <div class="course__time-title">До окончания акции осталось:</div>
                         <div class="course__time-wrap">
@@ -260,6 +257,10 @@
                             </div>
                         </div>
                     </div>
+                    <div class="course__button">
+                        <a href="" class="course__btn">ИДУ НА КУРС</a>
+                    </div>
+                    
                 </div>
             </div>
         </div>
@@ -267,7 +268,7 @@
         <section class="page__courseProgram courseProgram courseBackground">
             <div class="courseProgram__container _container">
                 <div class="courseProgram__body">
-                    <h2 style="color: #fff;" class="courseProgram__title">Что тебя ждет на курсе: </h2>
+                    <h2 style="color: #fff !important;" class="courseProgram__title titleMain">Что тебя ждет на курсе: </h2>
                     <div class="courseProgram__aside">
                         <div class="courseProgram__block dest-block">
                             <div><img src="./images/icons/Telegram App.png" alt="" class="courseProgram__image"></div>
@@ -297,7 +298,7 @@
         <section class="page__courseProgram courseProgram">
             <div class="courseProgram__container _container">
                 <div class="courseProgram__body">
-                    <h2 class="courseProgram__title">Что ты получишь в результате прохождения курса: </h2>
+                    <h2 class="courseProgram__title titleMain">Что ты получишь в результате прохождения курса: </h2>
                     <div class="courseProgram__aside">
                         <div class="courseProgram__block">
                             <div><img src="./images/icons/Love Path.png" alt="" class="courseProgram__image"></div>
@@ -321,7 +322,7 @@
         </section>
         <section class="page__slider">
             <div class="slider__container _container">
-            <h2 class="slider__title">Oтзывы</h2>
+            <h2 class="slider__title titleMain">Oтзывы и рисунки участниц:</h2>
             <div class="slide-container swiper">
                 <div class="slide-content">
                     <div style="align-items: center;" class="card-wrapper swiper-wrapper">
@@ -352,27 +353,27 @@
                         </div>
                         <div class="card swiper-slide">
                             <div class="card-content">
-                                <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/carousel/slide2.heic.jpg" alt="Image">
+                                <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/carousel/slide2.heic" alt="Image">
                             </div>
                         </div>
                         <div class="card swiper-slide">
                             <div class="card-content">
-                                <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/carousel/slide3.jpg.heic" alt="Image">
+                                <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/carousel/slide3.jpg" alt="Image">
                             </div>
                         </div>
                         <div class="card swiper-slide">
                             <div class="card-content">
-                                <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/carousel/slide4.jpg" alt="Image">
+                                <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/carousel/slide4.png" alt="Image">
                             </div>
                         </div>
                         <div class="card swiper-slide">
                             <div class="card-content">
-                                <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/carousel/slide5.jpg.png" alt="Image">
+                                <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/carousel/slide5.jpg" alt="Image">
                             </div>
                         </div>
                         <div class="card swiper-slide">
                             <div class="card-content">
-                                <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/carousel/slide6.jpg.jpg" alt="Image">
+                                <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/carousel/slide6.jpg" alt="Image">
                             </div>
                         </div>
                         </div>
