--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <div class="about__body">
                     <div class="about__block">
                         <div class="about__image">
-                            <img src="./images/about.png" alt="About" class="about-img">
+                            <img src="./images/about2.png" alt="About" class="about-img">
                         </div>
                         <div class="about__textBlock">
                             <div class="about__titles">
@@ -162,6 +162,11 @@
                             <div class="card swiper-slide">
                                 <div class="card-content">
                                     <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/certf1.jpg" alt="Image">
+                                </div>
+                            </div>
+                            <div class="card swiper-slide">
+                                <div class="card-content">
+                                    <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/certf7.jpg" alt="Image">
                                 </div>
                             </div>
                             </div>
@@ -353,7 +358,7 @@
                         </div>
                         <div class="card swiper-slide">
                             <div class="card-content">
-                                <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/carousel/slide2.heic" alt="Image">
+                                <img class="card-img" style="width: 100% !important;height: 100% !important;object-fit: cover;" src="./images/carousel/slide2.jpg" alt="Image">
                             </div>
                         </div>
                         <div class="card swiper-slide">
